[gd_scene load_steps=6 format=3 uid="uid://chcu1jn1bvajv"]

[ext_resource type="Texture2D" uid="uid://du3rr4jjyahw4" path="res://Assets/square.png" id="1"]
[ext_resource type="Script" path="res://Entities/Enemy.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(12.8179, 12.7441)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sy0oo"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(14.4, 14.4)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.290196, 0.0862745, 0.0862745, 1)
material = SubResource("CanvasItemMaterial_sy0oo")
scale = Vector2(0.8, 0.8)
texture = ExtResource("1")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("2")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PathingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="PathingTimer" to="." method="_on_PathingTimer_timeout"]
